syntax = "proto3";

option go_package = "./";

package test;

message node {
    string id = 1;
    string address = 2;
}

message seed_response {
    map<string, string> nodelist = 1;
    string acknowledgement = 2;
}

// --- Client-facing requests ---
message PutRequest {
    string key = 1;
    string value = 2;
}

message PutResponse {
    bool success = 1;
    string message = 2;
}

message GetRequest {
    string key = 1;
}

message GetResponse {
    string value = 1;
    bool found = 2;
}

// --- Leader â†’ Follower replication ---
message ReplicateRequest {
    string key = 1;
    string value = 2;
}

message ReplicateResponse {
    bool success = 1;
}

service network {
    rpc join_network(node) returns (seed_response);
    rpc Put(PutRequest) returns (PutResponse);
    rpc Get(GetRequest) returns (GetResponse);

    // Internal use: leader tells followers about updates
    rpc Replicate(ReplicateRequest) returns (ReplicateResponse);
}

